--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,7 @@
 
 	"mounts": [
 		// Mount local .azure to both .azure and .Azure because Linux FS is case-sensitive. AZ PS uses .Azure and AZ CLI uses .azure.
-		"source=/Users/ben/.azure,target=/home/vscode/.azure,type=bind,consistency=cached",
-		"source=/Users/ben/.azure,target=/home/vscode/.Azure,type=bind,consistency=cached"
+		"source=${localEnv:HOME}${localEnv:USERPROFILE}/.azure,target=/home/vscode/.azure,type=bind,consistency=cached",
+		"source=${localEnv:HOME}${localEnv:USERPROFILE}/.azure,target=/home/vscode/.Azure,type=bind,consistency=cached"
 	]
 }
